fluxcd/apps/base/gitlab/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gitlab
  labels:
    cert-manager-tls: gitlab
  annotations:
    linkerd.io/inject: enabled
