fluxcd/apps/base/gitlab/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitlab
  annotations:
    homelab/public: "true"
    external-dns.kubernetes.io/hostname: gitlab.${DOMAIN}
    external-dns.kubernetes.io/target: ${DOMAIN}
    # otherwise anubis renders the real page for every challenged request
    ingress-anubis.jaredallard.github.com/og-passthrough: "false"
    nginx.ingress.kubernetes.io/denylist-source-range: 43.172.0.0/15
    nginx.ingress.kubernetes.io/proxy-body-size: 10G
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "15"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/service-upstream: "true"
spec:
  ingressClassName: anubis
  tls:
  - hosts:
    - gitlab.${DOMAIN}
    secretName: ${LETSENCRYPT_CERT}
  rules:
  - host: gitlab.${DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab-webservice-default
            port:
              number: 8181
