fluxcd/apps/base/gitlab/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gitlab-ingress
spec:
  podSelector:
    matchLabels:
      release: gitlab
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-anubis
      podSelector:
        matchLabels:
          app.kubernetes.io/name: anubis
    ports:
    - port: 8181
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx-public
    ports:
    - port: 2222
      protocol: TCP
    - port: 5000
      protocol: TCP
    - port: 8090
      protocol: TCP
    - port: 8150
      protocol: TCP
    - port: 8154
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
      podSelector:
        matchLabels:
          app.kubernetes.io/name: vmagent
    ports:
    - port: 3807
      protocol: TCP
    - port: 8083
      protocol: TCP
    - port: 9168
      protocol: TCP
    - port: 9236
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: valkey
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: valkey
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: monitoring
      podSelector:
        matchLabels:
          app.kubernetes.io/name: vmagent
    ports:
    - port: 9121
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: object-storage
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: ${S3_CIDR}
    ports:
    - port: 443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gitlab-egress
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - gitaly
      - sidekiq
      - webservice
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
        - 100.64.0.0/10
        - 169.254.0.0/16
        - ${KUBE_API_CIDR}
    ports:
    - port: 22
      protocol: TCP
    - port: 443
      protocol: TCP
    - port: 587
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gitlab-runner
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - gitlab-gitlab-runner
      - gitlab-runner-amd64
      - gitlab-runner-arm64
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx-public
    ports:
    - port: 443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gitlab-runner-kubernetes
spec:
  podSelector:
    matchLabels:
      app: gitlab-gitlab-runner
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: ${KUBE_API_CIDR}
    ports:
    - port: 6443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gitlab-runner-hetzner
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - gitlab-runner-amd64
      - gitlab-runner-arm64
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
        - 100.64.0.0/10
        - 169.254.0.0/16
        - ${KUBE_API_CIDR}
    ports:
    - port: 22
      protocol: TCP
    - port: 443
      protocol: TCP
    - port: 2376
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gitlab-ci-job
spec:
  podSelector:
    matchExpressions:
    - key: custom
      operator: In
      values:
      - gitlab-runner
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx-public
    ports:
    - port: 22
      protocol: TCP
    - port: 443
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
        - 100.64.0.0/10
        - 169.254.0.0/16
        - ${KUBE_API_CIDR}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: renovate
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: renovate
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx-public
    ports:
    - port: 443
      protocol: TCP
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
        - 100.64.0.0/10
        - 169.254.0.0/16
        - ${KUBE_API_CIDR}
    ports:
    - port: 443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hcloud-cronjob
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: hcloud-cronjob
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        - 10.0.0.0/8
        - 172.16.0.0/12
        - 192.168.0.0/16
        - 100.64.0.0/10
        - 169.254.0.0/16
        - ${KUBE_API_CIDR}
    ports:
    - port: 443
      protocol: TCP
